font size fix on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,9 +11,21 @@ div.clear {clear: both;}
 .wrapper {margin:0 auto;}
 .footer-wrapper {padding: 20px;}
 h4, h5 {text-align: center;}
-#videos .video-holder {width: 515px; margin: 0 50px 80px 0; float: left;}
+#videos .video-holder {width: 516px; margin: 0 50px 80px 0; float: left;}
 #videos .video-holder:nth-child(even) {margin-right: 0px;}
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 1160px) {
     #videos .video-holder {width: 100%; margin: 0;}
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 640px) {
+    .page-content {font-size: 3.5vw;}
+    .site-nav li {font-size: 4vw;}
+    h1 {font-size: 10vw};
+}
+
+@media only screen and (min-device-width : 641px) and (max-device-width : 1160px) {
+    .page-content { font-size: 2vw;}
+    .site-nav li {font-size: 3.5vw;}
+    h1 {font-size: 10vw};
 }
